--- a/style.css
+++ b/style.css
@@ -45,14 +45,14 @@ nav img{
     margin: auto;
     transition: 0.5s;
 }
-
 .nav-links ul li:hover::after{
     width: 100%;
 }
-
 nav .fa{
     display: none;
 }
+
+/* MechAlchemy big logo */
 
 .text-box{
     width: 100%;
@@ -89,10 +89,137 @@ nav .fa{
     transition: .75s;
 }
 
-@media(max-width: 700px){
-    .text-box h1{
-        font-size: 30px;
-    }
+.main-section{
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    padding-top: 5vh;
+    padding-bottom: 5vh;
+    display: flex;
+    justify-content: space-between;
+}
+
+.leftcolumn {
+    float: left;
+    width: 67.5%;
+    padding-left: 2.5vw;
+}
+.rightcolumn {
+    float: right;
+    width: 25%;
+    padding-right: 2.5vw;
+}
+.rightcolumn h2 {
+    color: #a31f34;
+}
+.column {
+    float: none;
+    width: 80%;
+    padding-left: 10vw;
+    text-align: justify;
+}
+.column p{
+    line-height: 1.75;
+}
+
+.card {
+    background-color: #fff;
+    padding: 2vw;
+    text-align: center;
+    margin-top: 2vw;
+    margin-bottom: 2vw;
+    transition: 0.5s;
+    border-radius: 1vw;
+}
+.card h2{
+    color: #a31f34;
+    size: 72px;
+}
+.card h5 {
+    color: #000;
+}
+.card p {
+    color: #000;
+}
+.card:hover{
+    background-color: #ddd;
+}
+.card-link {
+    text-decoration: none;
+}
+
+/* index page */
+.main-icons img{
+    max-width: 64px;
+    padding-left: 6px
+}
+
+/* article page */
+.articleimage {
+    margin: 10px;
+    display: inline-block;
+}
+.articleimage img {
+    max-width: 85%;
+    max-height: auto;
+    border-radius: 10px;
+}
+
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+
+/* footer section */
+.footer {
+    color: #fff;
+    background-color: #a31f34;
+    margin-top: 20px;
+    min-height: 40vh;
+}
+.footer p {
+    text-align: left;
+    line-height: 1.5;
+    font-size: 14px;
+    color: #f3f3f3;
+}
+.footer h4 {
+    line-height: 2.5;
+    color: #f3f3f3;
+}
+.footer h4:hover{
+    text-decoration: underline;
+}
+.footer-link {
+    text-decoration: none;
+}
+.footer img{ /* logos at bottom */
+    max-width: 48px;
+    filter: invert(1);
+    padding-left: 6px
+}
+
+.footer-left {
+    padding: 20px;
+    padding-right: 70px;
+    float: left;
+    width: 40%;
+}
+.footer-center {
+    padding: 20px;
+    float: left;
+    width: 30%;
+}
+.footer-right {
+    padding: 20px;
+    float: left;
+    width: 30%;
+}
+
+@media only screen and (max-width: 768px) {
+
     .nav-links{
         position: absolute;
         background: #a31f34;
@@ -117,155 +244,75 @@ nav .fa{
     .nav-links ul{
         padding: 30px;
     }
-}
 
-.main-section{
-    width: 80%;
-    margin: auto;
-    text-align: center;
-    padding-top: 50px;
-    padding-bottom: 50px;
-    display: flex;
-    justify-content: space-between;
-}
-.leftcolumn {
-    float: left;
-    width: 75%;
-}
-.rightcolumn {
-    float: left;
-    width: 25%;
-    padding-left: 20px;
-}
-.rightcolumn h2 {
-    color: #a31f34;
-}
-.main-icons img{
-    max-width: 64px;
-    padding-left: 6px
-}
-.aboutusimg {
-    padding: 5px;
-}
-.aboutusimg img {
-    border-radius: 5px;
-    max-width: 100%;
-}
-.column {
-    float: left;
-    width: 100%;
-    padding-left: 20px;
-    text-align: justify;
-}
-.column p{
-    line-height: 1.75;
-}
-.articleimage {
-    margin: 10px;
-    display: inline-block;
-}
-.articleimage img {
-    max-width: 70%;
-    max-height: auto;
-    border-radius: 10px;
-}
-.top-articles {
-    list-style: none;
-    margin-left: 10px;
-}
-.top-articles li{
-    margin-bottom: 20px;
-    text-align: left;
-    color: #000;
-}
-.fakeimg {
-    background-color: #a31f34;
-    width: 100%;
-    padding: 20px;
-    margin-top: 20px
-}
-.card {
-    background-color: #fff;
-    padding: 20px;
-    margin-top: 20px;
-    margin-bottom: 40px;
-    transition: 0.5s;
-    border-radius: 10px;
-}
-.card h2{
-    color: #a31f34;
-    size: 72px;
-}
-.card h5 {
-    color: #000;
-}
-.card p {
-    color: #000;
-}
-.card:hover{
-    background-color: #ddd;
-}
-.card-link {
-    text-decoration: none;
-}
-.row:after {
-    content: "";
-    display: table;
-    clear: both;
-}
-.footer {
-    color: #fff;
-    background-color: #a31f34;
-    margin-top: 20px;
-    min-height: 40vh;
-}
-.footer p {
-    text-align: left;
-    line-height: 1.5;
-    font-size: 14px;
-    color: #f3f3f3;
-}
-.footer h4 {
-    line-height: 2.5;
-    color: #f3f3f3;
-}
-.footer h4:hover{
-    text-decoration: underline;
-}
-.footer-left {
-    padding: 20px;
-    padding-right: 70px;
-    float: left;
-    width: 40%;
-}
-.footer-center {
-    padding: 20px;
-    float: left;
-    width: 30%;
-}
-.footer-right {
-    padding: 20px;
-    float: left;
-    width: 30%;
-}
-.footer-link {
-    text-decoration: none;
-}
-.footer img{
-    max-width: 48px;
-    filter: invert(1);
-    padding-left: 6px
-}
 
-@media (max-width: 1000px) {
-    .leftcolumn, .rightcolumn, .column {
-      width: 100%;
-      padding: 0;
+    .text-box h1 {
+        font-size: 36px;
+        text-align: center; /* Center the text */
     }
-    .footer {
-        min-height: 75vh;
+
+    .card h2 {
+        font-size: 18px;
+        text-align: center; /* Center the text */
     }
-    .footer-left, .footer-center, .footer-right {
+
+    .card h5 {
+        font-size: 14px;
+        text-align: center; /* Center the text */
+    }
+
+    .card p {
+        font-size: 13px;
+        text-align: center;
+    }
+
+    .rightcolumn p {
+        text-align: center;
+    }
+
+    .main-icons {
+        justify-content: center; /* Center the icons */
+    }
+
+    .main-section {
+        flex-direction: column;
+        text-align: center; /* Center the text */
+    }
+
+    .main-section h3 {
+        text-align: center;
+    }
+    .main-section p {
+        text-align: center; /* Center the text */
+    }
+
+    .leftcolumn,
+    .rightcolumn {
         width: 100%;
+        float: none;
+        padding: 0;
     }
-  }
+
+    .column {
+        width: 100%;
+        padding: 0;
+    }
+
+    .footer {
+        min-height: 100vh;
+    }
+    .footer p {
+        text-align: left;
+    }
+
+    .articleheader {
+        text-align: center;
+    }
+
+    .footer-left,
+    .footer-center,
+    .footer-right {
+        width: 100%;
+        padding: 20px;
+    }
+}
