--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: 'Exo 2', sans-serif;
+    font-family: 'Exo 2', serif;
     box-sizing: border-box;
 }
 .header{
@@ -90,7 +90,7 @@ nav .fa{
 }
 
 .main-section{
-    width: 80%;
+    width: 92%;
     margin: auto;
     text-align: center;
     padding-top: 5vh;
@@ -101,13 +101,18 @@ nav .fa{
 
 .leftcolumn {
     float: left;
-    width: 67.5%;
-    padding-left: 2.5vw;
+    width: 40%;
+    padding-left: 1vw;
+}
+.centercolumn {
+    float: left;
+    width: 40%;
+    padding-left: 1vw;
 }
 .rightcolumn {
     float: right;
-    width: 25%;
-    padding-right: 2.5vw;
+    width: 20%;
+    padding-left: 1vw;
 }
 .rightcolumn h2 {
     color: #a31f34;
@@ -116,30 +121,48 @@ nav .fa{
     float: none;
     width: 80%;
     padding-left: 10vw;
-    text-align: justify;
+    text-align: left;
+}
+.column h1 {
+    font-size: 40px;
+    line-height: 1.25;
+}
+.column h5 {
+    font-size: 18px;
+    line-height: 3;
 }
 .column p{
     line-height: 1.75;
+    font-size: 20px;
 }
+
 
 .card {
     background-color: #fff;
+    border-width: 2px;
+    border-style: solid none none none;
+    border-color: #ced6d4;
     padding: 2vw;
-    text-align: center;
+    text-align: left;
     margin-top: 2vw;
     margin-bottom: 2vw;
     transition: 0.5s;
-    border-radius: 1vw;
 }
 .card h2{
-    color: #a31f34;
+    color: #000;
     size: 72px;
+    line-height: 1.2;
+    margin-top: 5px;
 }
 .card h5 {
     color: #000;
+    line-height: 1.2;
+    margin-top: 10px;
 }
 .card p {
     color: #000;
+    line-height: 1.2;
+    margin-top: 5px;
 }
 .card:hover{
     background-color: #ddd;
@@ -156,13 +179,23 @@ nav .fa{
 
 /* article page */
 .articleimage {
-    margin: 10px;
-    display: inline-block;
+    margin: 2px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    text-align: center;
 }
 .articleimage img {
-    max-width: 85%;
+    max-width: 100%;
     max-height: auto;
-    border-radius: 10px;
+    margin: 0 auto;
+}
+.source-list{
+    list-style-type: none;
+    padding-left: 0;
+}
+.source-list li{
+    margin-bottom: 10px;
+    font-size: 14px;
 }
 
 .row:after {
@@ -287,6 +320,7 @@ nav .fa{
     }
 
     .leftcolumn,
+    .centercolumn,
     .rightcolumn {
         width: 100%;
         float: none;
